[package]
name = "rs-youtube"
version = "0.1.1"
authors = ["jo! <jo@pop-os.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
directories = "3.0"
toml = "0.5"
serde_derive = "1.0"
ureq = { version = "2.1.0", features = ["json"] }
