[package]
name = "rs-youtube"
description = "Command line youtube client that uses the web api so no login or API key is needed."
version = "0.1.1"
authors = ["jo! <me@j0.lol>"]
edition = "2018"
repository = "https://github.com/j0lol/rs-youtube"
license = "MIT OR Apache-2.0"
keywords = ["youtube", "client"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["old_functions.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
directories = "3.0"
toml = "0.5"
serde_derive = "1.0"
ureq = { version = "2.1.0", features = ["json"] }
